integ-tests/tests/snapshots/parser__bad_strings__hex2.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-hex-escape]: 
  ┌─ hex2:1:10
  │
1 │ foo = "\u"
  │          ^ invalid hex escape '"'


